kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: travel-backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: travel-backend

  template:
    metadata:
      labels:
        app: travel-backend

    spec:
      containers:
        - name: travel-backend
          image: ghcr.io/induwara09/travel-agency-backend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

---

apiVersion: v1
kind: Service

metadata:
  name: travel-backend-service

spec:
  selector:
    app: travel-backend

  ports:
    - port: 8080
      targetPort: 8080
               readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3

  type: ClusterIP
