kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: travel-backend-ingress

spec:
  ingressClassName: traefik

  rules:
    - host: travel.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: travel-backend-service
                port:
                  number: 8080
